// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > renders the image avatar with an icon 1`] = `
<DocumentFragment>
  <div
    class="_container_de1988"
    style="--cpd-avatar-icon-size: 16px;"
  >
    <span
      aria-label="@bob:example.org"
      class="_avatar_de1988 _avatar-imageless_de1988"
      data-color="4"
      data-type="round"
      role="img"
    >
      B
    </span>
    <svg
      aria-hidden="true"
      class="_icon_de1988"
      fill="currentColor"
      height="16px"
      viewBox="0 0 24 24"
      width="16px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Avatar > renders the image-less avatar 1`] = `
<DocumentFragment>
  <span
    aria-label="@bob:example.org"
    class="_avatar_de1988 _avatar-imageless_de1988"
    data-color="4"
    data-type="round"
    role="img"
  >
    B
  </span>
</DocumentFragment>
`;
